# ChangeLog for app-text/a2ps
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/a2ps/ChangeLog,v 1.64 2007/05/24 17:52:25 beandog Exp $

  24 May 2007; Steve Dibb <beandog@gentoo.org> a2ps-4.13c-r5.ebuild:
  Fix mktemp deps for x86-fbsd

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org> a2ps-4.13c-r5.ebuild:
  RDEPEND on needed mktemp thanks to Paul DiSciascio <thenut@bytemonkey.net>
  in bug 172358

  19 Feb 2007; <genstef@gentoo.org> +files/a2ps-4.13-manpage-chmod.patch,
  a2ps-4.13c-r5.ebuild:
  Fix chmod thanks to Adrian Frith <adrian@leg.uct.ac.za> in bug 167670

  26 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable on Alpha.

  15 Jan 2007; Steve Dibb <beandog@gentoo.org> a2ps-4.13c-r5.ebuild:
  amd64 stable, bug 145048

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> a2ps-4.13c-r2.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  04 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> a2ps-4.13c-r5.ebuild:
  Don't use gnuconfig_update anymore.

  13 Dec 2006; Stefan Schweizer <genstef@gentoo.org> a2ps-4.13c-r5.ebuild:
  Fix depedn thanks jakub and Jürgen Pierau <gentoo-bugs@pierau.org> in bug
  156487

  06 Dec 2006; Lars Weiler <pylon@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable on ppc; bug #145048.

  06 Dec 2006; Lars Weiler <pylon@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable on ppc; bug #145048.

  02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org> a2ps-4.13c-r5.ebuild:
  ~x86-fbsd keyword added

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable on ppc64; bug #145048

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable on sparc wrt #145048

  27 Nov 2006; Christian Faulhammer <opfer@gentoo.org> a2ps-4.13c-r5.ebuild:
  stable x86, bug #145048

  21 Nov 2006; Jeroen Roovers <jer@gentoo.org> a2ps-4.13c-r5.ebuild:
  Stable for HPPA, despite the 4 failed tests.
