@@ -1,4 +1,5 @@
 AUX 4.13c-gcc34.patch 348 RMD160 c516143bb1528b70c3abd836abdf530eb60fd0bf SHA1 2904d6dc351347984ad85181c497c2f6f2f21e5c SHA256 0e4ab84eed2dc0b73a5c393f16dea4687d4cc1d649186c2d2e8ccb7585f96159
+AUX 50a2ps-gentoo.el 253 RMD160 4e98bec1dd60efb072e7cf7b6e6e3f58d53a4ead SHA1 210038d9f7e39a14fa8639aa02cb7c81945883b1 SHA256 3d114d11eca3eb4f96e656d188e90082432a1206f39fd471d72c0d4e392d7615
 AUX a2ps-4.13-fixcachecheck.patch 444 RMD160 6a26c535b9af9be96d5a2ac32689b19daacc83f9 SHA1 64dadd08f018a65e380fd798157ce04af3a8f6b2 SHA256 d7f37d72ed46d73e26261c3473c738174ef8156f8a1dd9355850fcaa9befd622
 AUX a2ps-4.13-manpage-chmod.patch 461 RMD160 248e2a40119eb50558093a725e89644ac4730291 SHA1 2bb3d0a2ef2f3ff9262723e35c742a80ab0235ce SHA256 032c4698c1dabb1a72978b9aefef7a8895098fb5a7e46e81d861fedfef3b11ab
 AUX a2ps-4.13-select-freebsd.patch 1582 RMD160 3046e537c2447788ada3ce69ae51dac7b3ef0376 SHA1 390bb987b19dba341dbdd05635b917379881d862 SHA256 1ef965e835524b4d45dbe98038817d48ebb0c152d7c2c62c1e3d29f85bb0e2ae
@@ -13,5 +14,6 @@ AUX a2ps-4.13c-stdarg.patch 1505 RMD160 5e46f07ec9d37ab53262f9611397f19bf3bd0b6e
 DIST a2ps-4.13c-ja_nls.patch.gz 38189 RMD160 932f430064f77d65768d2d1701ea650ae1103bb0 SHA1 7eeb2c85697b5eff13701b7b600e4a959b12f134 SHA256 8bc15ae152205b184a609777ac29430780eadacba2fd90bfa1fe318e43bd781f
 DIST a2ps-4.13c.tar.gz 2395885 RMD160 d6464e88236a4efa8377e37e29e548411cd9c863 SHA1 f32f8476578a97049a5a75216ad6eda9f902dbc2 SHA256 dfdd509ef79040fb300b2709a8fc54d9562f3ce141184958e3c2303cb3cf4890
 EBUILD a2ps-4.13c-r5.ebuild 2993 RMD160 e04e0b4646041f077d1f6177d7e65f2ea75f12fa SHA1 ac716d71e057d9a1af76295bb9aa8bbf19c8f909 SHA256 48dbb2462945e3c6e4723ceb3c38134eca60ceb4ca3ccea1a9f8b23789e87ee6
-MISC ChangeLog 9601 RMD160 12be805a8d5c552c573da76c6ccd37a4ff4c01a4 SHA1 ca4b947855783d9810d96ff57f3c660054c9e9e8 SHA256 a5dadbd3a256f21a0c145a9c2e7a9be16c6c30948d284c2b78afaab449733e39
+EBUILD a2ps-4.13c-r6.ebuild 3309 RMD160 782711a1e489e15976a435a33ad01c469ac5d09f SHA1 0938bc9f9ac9c4f795c8820a2d1faded9cfa8e0a SHA256 ab61b0abc9cb4349ad0a3b9126c22db5a26ac6f815f5ecdac33f38848ef973c8
+MISC ChangeLog 9758 RMD160 6cd2107f15891b656c8b84a7959a2e5049400236 SHA1 7b764f5536f6fd6b6a5810bc11c37a5c825be245 SHA256 871272ff087723f585cf7d22a6d70b446939d6475c1f0bd80745ce875c4796fb
 MISC metadata.xml 178 RMD160 1823829273be97b95b286540a3439d152281baf1 SHA1 e0647c54037d344aabf04d0ce6bb79d133bfcc18 SHA256 70722a9097b3b57eb4b153054cc852b0938c47120de0fdfd233cac6b209b412a
